--- a/index.html
+++ b/index.html
@@ -2,46 +2,41 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" href="style/style.css"/>
-		<link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
+		<link rel="stylesheet" media="screen and (max-width: 768px)" href="style/petite_resolution.css"/>
 		<title>Site Web</title>
 	</head>
 
-	
 	<body>
-
-		<ul> 
-			<a href="#part1" class="js-scrollTo"><li></li></a>
-			<a href="#part2" class="js-scrollTo"><li></li></a>
-			<a href="#part3" class="js-scrollTo"><li></li></a>
-
-		</ul>	
-
-		<section id="part1"> 
-			<h1>Bonjour</h1>
-		</section>
-
-		<section id="part2"> 
-			<h1>Je m'appelle</h1>
-		</section>
-
-		<section id="part3">
-			<h1>Pénélope Douillet</h1>
-		</section>
-
+		<div id="conteneur">
+			<header>
 		
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		
-	<script>
-			$(document).ready(function() {
-				$('.js-scrollTo').on('click', function() { // Au clic sur un élément
-					var page = $(this).attr('href'); // Page cible
-					var speed = 750; // Durée de l'animation (en ms)
-					$('html, body').animate( { scrollTop: $(page).offset().top }, speed ); // Go
-					return false;
-				});
-			});
-	</script>
+				<div id="logo">
+				</div>
 
+				<nav>
+					<ul>
+						<li></li>
+						<li></li>
+						<li></li>
+			 		</ul>
+				</nav>
+
+			</header>
+
+		<section>
+		
+			<article></article>	
+			<aside> </aside>	
+
+		</section>
+
+
+		<footer> 
+		</footer>
+
+
+		</div>
 	</body>
+
 
 </html>
